name:                adventofcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonathanlking/adventofcode-2018#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan King
maintainer:          jonathanlking@me.com
copyright:           Copyright: (c) 2018 Jonathan King
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable adventofcode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , bytestring
                     , containers
                     , text
                     , lens
                     , generic-lens
                     , mtl
                     , file-embed
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
  other-modules:       Advent.Day.One
